# ndm-fresh-breakability

./: .dockerignore  .env  .env.example  .env.production  .env.template  .gitignore  .npmrc  .syncpackrc.json  ADS_IMPLEMENTATION_DETAILS.md  AZURE.md  AZURE_ANF_CLONE_POC.md  CLAUDE.md  DEV-SETUP.md  Dockerfile  LOCAL.md  README.md  UPGRADE_POD_IMAGE.md  VM-SETUP.md  apply-logger-changes.sh  build-results.json  create-cru.sh  docker-compose.yml  dump.rdb  entrypoint.sh  eslint.config.js  go.mod  go.sum  inc_build.sh  index.html  ndm.md  nginx.conf  package-lock.json  package.json  pom.xml  setup-hooks.sh  tailwind.config.js  tailwind.config.ts  test_calfus.txt  test_file.txt  tsconfig.json  (+2 more)
.breakability/: breakability_analyst.py
.githooks/: README.md  pre-commit
.github/: CODEOWNERS  codeql-config.yml  copilot-instructions.md  dependabot.yml  publish-pkg.yaml  release-branches.json
.husky/: README.md  pre-commit
app-deployment/: .gitignore  README.md
commons/: api-response-builder.ts  api-response.interface.ts
constants/: enums.ts
docs/: AZURE.md  About-NDM.md  DEV-SETUP.md  PACKER.md  VM-SETUP.md  WINDOWS-WORKER.md  _audit.css  acl-comparator-test-matrix.md  add-scs-based-github-custom-runner.md  codebase-audit-2026-05.html  codebase-audit-2026-05.md  dependency-sync.md  postgres-tuning.md  postgres-values-changes.md  redis-oom-analysis.md  smb-migration-lib-comparision.md  third-party-images-workflow.md
liquibase/: 20250122_01_create_all_existing_tables.sql  20250123_01_create_all_existing_tables.sql  20250124_01_create_all_admin_existing_tables.sql  20250124_01_create_all_config_existing_tables.sql  20250124_01_create_all_db_writer_existing_tables.sql  20250124_01_create_all_existing_tables.sql  20250124_01_create_all_jobs_existing_tables.sql  20250124_01_create_all_reports_existing_tables.sql  20250131_01_procedure.sql  20250203_01_seed.sql  20250206_01_alter_inventory_table.sql  20250209_01_jobs_report_procedure.sql  20250210_01_add_meta_config_and_worker_id_column.sql  20250210_01_jobrun_table_add_column.sql  20250210_01_worker_add_meta_config_column.sql  20250211_01_worker_table_add_worker_number_column.sql  20250213_02_procedure.sql  20250215_03_procedure.sql  20250217_01_create_operation_error_table.sql  20250217_01_create_task_error_table.sql  20250219_01_alter_operations_error_table.sql  (+23 more)
services/parquet-service/: .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml
services/parquet-service/helm/: Chart.yaml  values.yaml
services/parquet-service/helm/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-worker.yaml  networkpolicy.yaml  pvc.yaml  service.yaml
services/parquet-service/src/parquet_service/: __init__.py  config.py  serve.py  work_manager.py  worker.py  worker_manager.py
services/parquet-service/src/parquet_service/api/: __init__.py  auth.py  server.py
services/parquet-service/src/parquet_service/io/: __init__.py  checkpoint.py  stream_reader.py  stream_writer.py
services/parquet-service/src/parquet_service/lib/: __init__.py  command.py  comparator.py  merkle.py  parquet_writer.py  paths.py  schema.py  sorter.py
services/parquet-service/src/parquet_service/workflow/: __init__.py  activities.py  merge_child.py  registry.py  scan_ingestion.py  types.py
services/parquet-service/tests/: conftest.py  test_architecture.py  test_merkle.py  test_parquet_writer.py  test_registry.py  test_schema.py  test_stream.py  test_work_manager.py  test_worker_manager.py
(+4233 files in other folders)
