[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parquet-service"
version = "0.1.0"
description = "NDM Parquet metadata-storage redesign — ingestion / merkle / diff service"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",            # async client for the work-manager config poll
    "pyarrow>=17.0.0",
    "pydantic>=2.0.0",
    "msgpack>=1.0.0",
    "blake3>=0.4.0",            # BLAKE3-128 directory hash (D12)
    "prometheus-client>=0.20.0",
    "pyjwt[crypto]>=2.8.0",     # inbound worker Bearer-JWT guard (D15)
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "fakeredis>=2.26.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# --- Lint + format: ruff (replaces flake8/isort/black) ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, N pep8-naming, UP pyupgrade,
# B bugbear, C4 comprehensions, SIM simplify, PTH use-pathlib, RUF ruff-specific.
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF"]
# E501 (line length) is left to the formatter, not the linter.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]  # test_* helper names need not be snake_case-strict

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are immutable sentinels, not real call-in-default bugs.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

[tool.ruff.format]
docstring-code-format = true

# --- Static types: mypy (CI gate) ---
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
# 3rd-party libs without bundled stubs — don't fail on missing imports.
module = ["pyarrow.*", "blake3.*", "msgpack.*", "fakeredis.*"]
ignore_missing_imports = true

# --- Language server: pyright (interactive diagnostics / navigation) ---
[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
